--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="mySlides w3-display-container w3-center">
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhCQV2mXLjU85cHrrSaq2PTCqarg2jA70iIdDGx45BOszpQ8y8rNdCZ2IMqpRB7eGEpEpIkPTPk_iDWqYO4NwkK3Qg5Q0wPGwRQ2-jg-uXpUaCIgkv1vsX9OtsFlN_cc3FRYshMVbFi91NZZOBg_V4NUGX4_AHOTaqGr_J_GrbyfVUuE5FCX2-Br_2Z8D0/s320/Grupo%201.png" style="width:100%" hegiht="80%">
             <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-              
+            <h3>
+                <p style="-16px color: w3-text-white;"> Ten tú también tu día especial</p></h3>  
             </div>
         </div>
         <div class="mySlides w3-display-container w3-center">
@@ -58,7 +59,8 @@
         </div>
         <div class="mySlides w3-display-container w3-center">
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgElNQwRm5cc-jiRUNwpdsrXaG4p9n1TQiGKceU3_SDJxsIm613Phcm4hf863h0EnUeb-drI7hz8liCAI5jysIqQA7KajBNbBAeGC0DTVRakI1VH52hRlkv6c_gJfaYL_XMNIh-dQ6fwof3g-wPCcNdF160CASKYQMjfsjMvwiHir7aUpTn2K4-3m9N7Ys/s320/a7dbb240-ca34-48d3-b5b9-a45658ec5ef2.png" style="width:65%" hegiht="80%">
-            
+            <h3>
+                <p style="-16px color: w3-text-white;"> Ten tú también tu día especial</p></h3>
         </div>
 
         <!-- The Band Section -->
@@ -71,7 +73,7 @@
 ¡Ofrecemos un servicio cercano de calidad con asesoramiento personalizado!
 </p>
 <p>Todo tipo de agrupaciones. </p>
-<p> Asesoramiento de repertorio, atendiendo en todo momento a las propuestas de nuestros cliente.
+<p> Asesoramiento de repertorio, atendiendo en todo momento a las propuestas de nuestros clientes.
     <p>
 ¡Eche un vistazo a nuestra galería de vídeos para saber cómo suenan las canciones que tocamos! </p>
 <p>¡Vosotros simplemente decidnos qué es lo que os gustaría que sonase en vuestro día especial, y nosotros nos encargamos del resto!</p>
@@ -119,10 +121,10 @@ Pregúntanos sin ningún tipo de compromiso, respondemos en menos de 24 horas.</
             </div>
 
         <!-- The Tour Section -->
-      <head> <div id="reserva">
-    <meta charset="UTF-8" id="calendar">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Fechas</title>
+          <head> <div id="reserva">
+        <meta charset="UTF-8" id="calendar">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Reserva de Fechas</title>
 </head>
 <body>
     <h1>Reserva tu fecha</h1>
